# visquery

./: .env.example  .gitignore  Caddyfile  README.md  VISQUERY_BUILD_SPEC.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  migrate.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_image_segments.py  0002_create_reports.py  0003_add_tag_validation.py  0004_create_doc_chunks.py
backend/app/: config.py  deps.py  main.py  test-ollama.ipynb
backend/app/ingest/: main.py  pipeline.py
backend/app/models/: building.py  document.py  feedback.py  report.py  segment.py  source.py
backend/app/prompts/: rewriter.txt  router.txt  synthesizer.txt
backend/app/routers/: admin.py  archive.py  contact.py  feedback.py  images.py  reports.py  search.py  segment.py  sources.py
backend/app/services/: agents.py  embedder.py  image_optimizer.py  llm.py  mmr.py  reranker.py  retrieval.py  style.py  text_embedder.py  vector_store.py
backend/app/vocabularies/: climate.yaml  materials.yaml  structural.yaml  typology.yaml
backend/app/workers/: artifact_extractor.py  captioner.py  doc_indexer.py  ingest_worker.py  metadata_extractor.py  segment_indexer.py  tag_validator.py
backend/eval/: README.md  __init__.py  _bootstrap.py  build_golden.py  judge.py  metrics.py  run_eval.py
backend/eval/datasets/: golden.jsonl
backend/eval/reports/: baseline.json
backend/fastsam-s/: metadata.json
backend/migrations/: init.sql
backend/scripts/: backfill_doc_chunks.py  backfill_segments.py  backfill_tag_validation.py  build_faiss_from_images.py  reindex_faiss.py  restore_images_from_metadata.py
backend/segformer-b2-ade/: config.json  preprocessor_config.json
backend/tests/: test_captioner.py  test_e2e.py
scraper/: README.md  pyproject.toml  scrapy.cfg
scraper/visquery_scraper/: __init__.py  items.py  settings.py
(+128 files in other folders)
